// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/select/demo/automatic-tokenization.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#down"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-disabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="-1"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#down"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: loading"
          class="anticon anticon-loading"
        >
          <svg
            aria-hidden="true"
            class="anticon-spin"
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#loading"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/coordinate.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Zhejiang"
        >
          Zhejiang
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#down"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Hangzhou"
        >
          Hangzhou
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#down"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/custom-dropdown-menu.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:120px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy"
      >
        Lucy
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#down"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/hide-selected.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Inserted are removed
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/label-in-value.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:120px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy (101)"
      >
        Lucy (101)
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#down"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/multiple.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:none;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Please select
      </div>
      <ul>
        <li
          class="ant-select-selection__choice"
          role="presentation"
          style="user-select:none;-webkit-user-select:none"
          title="a10"
          unselectable="on"
        >
          <div
            class="ant-select-selection__choice__content"
          >
            a10
          </div>
          <span
            class="ant-select-selection__choice__remove"
          >
            <i
              aria-label="icon: close"
              class="anticon anticon-close ant-select-remove-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#close"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-select-selection__choice"
          role="presentation"
          style="user-select:none;-webkit-user-select:none"
          title="c12"
          unselectable="on"
        >
          <div
            class="ant-select-selection__choice__content"
          >
            c12
          </div>
          <span
            class="ant-select-selection__choice__remove"
          >
            <i
              aria-label="icon: close"
              class="anticon anticon-close ant-select-remove-icon"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#close"
                />
              </svg>
            </i>
          </span>
        </li>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/optgroup.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy"
      >
        Lucy
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#down"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/search.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select a person
      </div>
      <div
        class="ant-select-search ant-select-search--inline"
        style="display:none"
      >
        <div
          class="ant-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="ant-select-search__field"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        aria-label="icon: down"
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#down"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/search-box.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled ant-select-no-arrow"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        input search text
      </div>
      <div
        class="ant-select-search ant-select-search--inline"
        style="display:none"
      >
        <div
          class="ant-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="ant-select-search__field"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/select-users.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Select users
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="ant-select ant-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="a1"
        >
          a1
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#down"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <br />
  <div
    class="ant-select ant-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--multiple"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
          style="display:none;user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          Please select
        </div>
        <ul>
          <li
            class="ant-select-selection__choice"
            role="presentation"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#close"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-selection__choice"
            role="presentation"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#close"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="ant-select-search__field"
                value=""
              />
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <br />
  <div
    class="ant-select ant-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--multiple"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
          style="display:none;user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          Please select
        </div>
        <ul>
          <li
            class="ant-select-selection__choice"
            role="presentation"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#close"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-selection__choice"
            role="presentation"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="on"
          >
            <div
              class="ant-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="ant-select-selection__choice__remove"
            >
              <i
                aria-label="icon: close"
                class="anticon anticon-close ant-select-remove-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#close"
                  />
                </svg>
              </i>
            </span>
          </li>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="ant-select-search__field"
                value=""
              />
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/suffix.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: smile"
          class="anticon anticon-smile ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#smile"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-disabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="-1"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: meh"
          class="anticon anticon-meh ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#meh"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/tags.md correctly 1`] = `
<div
  class="ant-select ant-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--multiple"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Tags Mode
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="ant-select-search__field"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
